🐛 Fixed page style in dark mode
closes https://github.com/TryGhost/Casper/issues/643

- fixes background color for pages in dark mode

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2846,7 +2846,8 @@ Usage (In Ghost editor):
     }
 
     .site-main,
-    .post-template .site-main {
+    .post-template .site-main,
+    .page-template .site-main {
         background: var(--darkmode);
     }
 
